; ModuleID = '/home/carl/AnghaBench/postgres/contrib/btree_gist/extr_btree_interval.c_gbt_intveq.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/btree_gist/extr_btree_interval.c_gbt_intveq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@interval_eq = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32*)* @gbt_intveq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gbt_intveq(i8* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32, i32* @interval_eq, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @IntervalPGetDatum(i8* %8)
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @IntervalPGetDatum(i8* %10)
  %12 = call i32 @DirectFunctionCall2(i32 %7, i32 %9, i32 %11)
  %13 = call i32 @DatumGetBool(i32 %12)
  ret i32 %13
}

declare dso_local i32 @DatumGetBool(i32) #1

declare dso_local i32 @DirectFunctionCall2(i32, i32, i32) #1

declare dso_local i32 @IntervalPGetDatum(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
